Fixes to sellerschool css. Fixes gaps in the
footer in mobile view and also made the header
sticky so it displays below the CMS toolbar if it is there

--- a/shop/static/css/sellerschool.css
+++ b/shop/static/css/sellerschool.css
@@ -19,7 +19,7 @@ body {
     background-color: #F76C6C;
     width: 100%;
     padding: 1rem;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 100;
@@ -161,7 +161,7 @@ body {
     }
 
     .logo img {
-        height: auto;
+        height: 40px;
     }
 
     .main-content {
